--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ html {
   font-size: 16px;
   height: 100%;
 }
-body{
+body {
   background-color: burlywood;
 }
 .container {
   max-width: 1170px;
   margin: 0 auto;
-  padding: 0 15px;  
+  padding: 0 15px;
   min-height: 100vh;
   display: flex;
   justify-content: center;
@@ -28,24 +28,25 @@ h1 {
   font-weight: bold;
   color: blueviolet;
   padding: 20px;
-  
 }
 * {
   font-family: sans-serif;
 }
 
 .modal {
-  display: block;
+  /* display: none; */
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
-
+.modal.hidden {
+  display:none;
+}
 .popap {
   position: absolute;
-  border: 1px solid rgba(0, 0, 0, .5);
+  border: 1px solid rgba(0, 0, 0, 0.5);
   width: 300px;
   height: 250px;
   background: #fff;
