--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   height: 100%;
 }
 body {
-  background-color: burlywood;
+  background-color: rgb(238, 208, 168);
 }
 .container {
   max-width: 1170px;
@@ -32,91 +32,48 @@ h1 {
 * {
   font-family: sans-serif;
 }
-
-.modal {
-  /* display: none; */
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3);
-  cursor: pointer;
+.tabs {
+  width: 600px;
+  margin: 0 auto;
 }
-.modal.hidden {
-  display:none;
+.tabs-headers {
+  display: flex;
+  flex-direction: row;
 }
-.popap {
-  position: absolute;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  width: 300px;
-  height: 250px;
-  background: #fff;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  cursor: default;
-  border-radius: 3px;
-}
-
-.popap-head {
+.tabs-header__item {
+  width: 200px;
+  text-align: center;
+  font-weight: bold;
+  padding: 15px;
+  border: 1px solid lightpink;
   position: relative;
-  height: 25px;
 }
-
-.popap-head .close {
-  position: absolute;
-  height: 20px;
-  padding: 0 2px;
-  right: 10px;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  border: 1px solid #ccc;
-  cursor: pointer;
+.tabs-header__item.active {
+  border: 1px solid brown;
 }
-
-.popap-head .close:hover {
-  border-color: #333;
+.tabs-header__item.closed {
+  display: none;
 }
-
-.popap-main {
+.tabs-content {
+  font-weight: normal;
+}
+.tabs-content__item {
+  display: none;
+  border: 1px solid lightpink;
   padding: 20px;
-  box-sizing: border-box;
 }
-
-.popap-form {
-  margin-bottom: 20px;
-}
-
-.popap-main label {
+.tabs-content__item.active {
   display: block;
-  margin-bottom: 10px;
+  background-color: whitesmoke;
 }
-
-.popap-main label span {
-  font: 12px sans-serif;
+.tabs-content__item.closed {
   display: block;
 }
-
-.popap-main label input {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.popap-btn {
-  text-align: right;
-}
-
-.btn {
-  display: inline-block;
-  border: 1px solid #ccc;
-  padding: 5px;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  border-color: #333;
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  opacity: 0.5;
 }
