--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   height: 100%;
 }
 body {
-  background-color: burlywood;
+  background-color: rgb(238, 208, 168);
 }
 .container {
   max-width: 1170px;
@@ -22,14 +22,39 @@ body {
   justify-content: center;
   align-items: center;
 }
-h1 {
-  font-size: 3rem;
-  font-style: normal;
-  font-weight: bold;
-  color: blueviolet;
-  padding: 20px;
+
+.tbody tr td {
+display: flex;
+
+}
+.tr{
+  width: 100%;
 }
 * {
   font-family: sans-serif;
 }
 
+.select__description {
+  font-size: 16px;
+  font-weight: 600;
+  font-style: italic;
+}
+.select {
+  width: 20px;
+  height: 20px;
+  background-color: salmon;
+}
+.filtration {
+  padding: 2px 10px;
+
+}
+.table {
+  border: 1px solid red;
+  width: 100%;
+}
+.header__cell {
+  padding: 10px;
+  text-align: center;
+  border: 1px solid red ;
+  font-weight: 500;
+}
