--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
   height: 100%;
 }
 body {
-  background-color: burlywood;
+  background-color: rgb(238, 208, 168);
 }
 .container {
   max-width: 1170px;
@@ -22,14 +22,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-h1 {
-  font-size: 3rem;
-  font-style: normal;
-  font-weight: bold;
-  color: blueviolet;
-  padding: 20px;
+.table {
+  border: 1px solid red;
+  width: 100%;
 }
-* {
-  font-family: sans-serif;
-}
-
