--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ body {
   margin: 0 auto;
   padding: 0 15px;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 h1 {
   font-size: 3rem;
@@ -33,3 +30,24 @@ h1 {
   font-family: sans-serif;
 }
 
+label {
+  display: block;
+  margin: 5px;
+  text-align: right;
+}
+button {
+  cursor: pointer;
+}
+button:hover {
+  transform: scale(1.05);
+  font-weight: 500;
+}
+.labels {
+  width: 400px;
+}
+.buttons {
+  width: 400px;
+  border: 1px solid transparent;
+  display: flex;
+  justify-content: space-between;
+}
