--- a/style.css
+++ b/style.css
@@ -1234,3 +1234,14 @@ button,
 .hidden {
   display: none;
 }
+.radio-desc{
+  font-size: 16px;
+  font-weight: 600;
+  margin: 30px 5px 10px 10px;
+  
+}
+.element input{
+  margin: 5px;
+  padding: 10px;
+  
+}
